--- a/public/assets/css/master.css
+++ b/public/assets/css/master.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900; 1.100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 
 :root{
     --bg-color: #1466c3;
@@ -33,7 +38,7 @@
 main{
     background-color: var(--four-color);
     height: 100%;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .containerPreg {
@@ -44,7 +49,7 @@ main{
 }
 /*del h2 del index*/
 .descripcion { 
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: var(--bg-color);
     text-align: center;
     border-bottom: 3px solid;
@@ -54,12 +59,12 @@ main{
 }
 
 .preg { 
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-family: "Roboto Condensed", sans-serif;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    font-family: 'Poppins', sans-serif;
     color: var(--bg-color);
     text-align: center;  
-    font-size: 30px;
+    font-size: 50px;
     font-weight: bold;
 }
 
@@ -70,36 +75,13 @@ main{
 }
 
 .parrafo-index {
-    font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
     font-size: 20px;
     padding-top: 40px;
     padding-bottom: 5px;
 }
 
-.accordion-button {
-    background-color: #f8f9fa;
-    color: #0d6efd;
-    font-weight: bold;
-    font-family: "Roboto Condensed", sans-serif;
-    box-sizing: border-box;
-    font-size: 15px;
-    padding-top: 10px;
-}
-
-.accordion-button:not(.collapsed) {
-    color: #0d6efd;
-    background-color: #e9ecef;
-    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
-}
-
-.accordion-body {
-    font-family: "Roboto Condensed", sans-serif;
-    box-sizing: border-box;
-    font-size: 15px;
-    padding-top: 10px;
-    
-}
 
 /* noticias*/
 
@@ -234,7 +216,7 @@ main{
 /*fin de prueba */
 
 h2 {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: var(--bg-color);
     text-align: center;
 }
@@ -253,7 +235,7 @@ body {
 header, main, footer {
     border: 2px solid var(--four-color);
     box-sizing: border-box;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -271,7 +253,7 @@ header {
 }
 
 nav {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 nav ul {
@@ -293,7 +275,7 @@ nav a {
 /*FOOTER*/
 footer {
     background-color: var(--three-color);
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: var(--four-color);
 }
 
@@ -467,6 +449,20 @@ footer p {
     nav li div {
         display: inline;
     }
+
+    /**carussel */
+.carousel-img {
+    width: 100%;
+    height: 400px; 
+    object-fit: cover; 
+    object-position: center; 
+}
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+    background-color: transparent !important;
+    outline: none;
+    box-shadow: none;
+}
 
     /*FOOTER*/
     footer i {
